--- a/scss/style.css
+++ b/scss/style.css
@@ -382,7 +382,7 @@ a {
   text-align: center;
   max-width: 355px; }
 .tabs__content {
-  padding: 24px 67px; }
+  padding: 24px 47px; }
 
 .tab {
   font-size: calc(1rem + 2px); }
@@ -550,9 +550,14 @@ a {
 
 .upHoverBlock {
   position: relative; }
+  .upHoverBlock img {
+    width: 97px;
+    height: 132px;
+    transition: .3s ease; }
   .upHoverBlock:hover img {
     width: 128px;
-    height: 174px; }
+    height: 174px;
+    transition: .3s ease; }
   .upHoverBlock:hover:after {
     content: 'Обед';
     position: absolute;
@@ -573,59 +578,354 @@ a {
 .content-flex-images {
   display: none;
   grid-template-columns: repeat(5, auto);
-  grid-template-rows: repeat(1, 174px);
+  grid-template-rows: repeat(1, 132px);
+  padding-bottom: 52px;
   justify-content: center;
   align-items: center;
   grid-gap: 10px;
   padding-top: 30px; }
 
-#tab-vertical-1:checked ~ .tabs-vertical__buttons .tabs-vertical-button-1 {
+#tab-vertical-1-1:checked ~ .tabs-vertical__buttons .tabs-vertical-button-1-1 {
   background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
   color: white; }
 
-#tab-vertical-1:checked ~ .tabs-vertical__content .content-flex-images-1 {
+#tab-vertical-1-1:checked ~ .tabs-vertical__content .content-flex-images-1-1 {
   display: grid; }
 
-#tab-vertical-2:checked ~ .tabs-vertical__buttons .tabs-vertical-button-2 {
+#tab-vertical-1-2:checked ~ .tabs-vertical__buttons .tabs-vertical-button-1-2 {
   background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
   color: white; }
 
-#tab-vertical-2:checked ~ .tabs-vertical__content .content-flex-images-2 {
+#tab-vertical-1-2:checked ~ .tabs-vertical__content .content-flex-images-1-2 {
   display: grid; }
 
-#tab-vertical-3:checked ~ .tabs-vertical__buttons .tabs-vertical-button-3 {
+#tab-vertical-1-3:checked ~ .tabs-vertical__buttons .tabs-vertical-button-1-3 {
   background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
   color: white; }
 
-#tab-vertical-3:checked ~ .tabs-vertical__content .content-flex-images-3 {
+#tab-vertical-1-3:checked ~ .tabs-vertical__content .content-flex-images-1-3 {
   display: grid; }
 
-#tab-vertical-4:checked ~ .tabs-vertical__buttons .tabs-vertical-button-4 {
+#tab-vertical-1-4:checked ~ .tabs-vertical__buttons .tabs-vertical-button-1-4 {
   background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
   color: white; }
 
-#tab-vertical-4:checked ~ .tabs-vertical__content .content-flex-images-4 {
+#tab-vertical-1-4:checked ~ .tabs-vertical__content .content-flex-images-1-4 {
   display: grid; }
 
-#tab-vertical-5:checked ~ .tabs-vertical__buttons .tabs-vertical-button-5 {
+#tab-vertical-1-5:checked ~ .tabs-vertical__buttons .tabs-vertical-button-1-5 {
   background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
   color: white; }
 
-#tab-vertical-5:checked ~ .tabs-vertical__content .content-flex-images-5 {
+#tab-vertical-1-5:checked ~ .tabs-vertical__content .content-flex-images-1-5 {
   display: grid; }
 
-#tab-vertical-6:checked ~ .tabs-vertical__buttons .tabs-vertical-button-6 {
+#tab-vertical-1-6:checked ~ .tabs-vertical__buttons .tabs-vertical-button-1-6 {
   background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
   color: white; }
 
-#tab-vertical-6:checked ~ .tabs-vertical__content .content-flex-images-6 {
+#tab-vertical-1-6:checked ~ .tabs-vertical__content .content-flex-images-1-6 {
   display: grid; }
 
-#tab-vertical-7:checked ~ .tabs-vertical__buttons .tabs-vertical-button-7 {
+#tab-vertical-1-7:checked ~ .tabs-vertical__buttons .tabs-vertical-button-1-7 {
   background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
   color: white; }
 
-#tab-vertical-7:checked ~ .tabs-vertical__content .content-flex-images-7 {
+#tab-vertical-1-7:checked ~ .tabs-vertical__content .content-flex-images-1-7 {
+  display: grid; }
+
+#tab-vertical-2-1:checked ~ .tabs-vertical__buttons .tabs-vertical-button-2-1 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-2-1:checked ~ .tabs-vertical__content .content-flex-images-2-1 {
+  display: grid; }
+
+#tab-vertical-2-2:checked ~ .tabs-vertical__buttons .tabs-vertical-button-2-2 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-2-2:checked ~ .tabs-vertical__content .content-flex-images-2-2 {
+  display: grid; }
+
+#tab-vertical-2-3:checked ~ .tabs-vertical__buttons .tabs-vertical-button-2-3 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-2-3:checked ~ .tabs-vertical__content .content-flex-images-2-3 {
+  display: grid; }
+
+#tab-vertical-2-4:checked ~ .tabs-vertical__buttons .tabs-vertical-button-2-4 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-2-4:checked ~ .tabs-vertical__content .content-flex-images-2-4 {
+  display: grid; }
+
+#tab-vertical-2-5:checked ~ .tabs-vertical__buttons .tabs-vertical-button-2-5 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-2-5:checked ~ .tabs-vertical__content .content-flex-images-2-5 {
+  display: grid; }
+
+#tab-vertical-2-6:checked ~ .tabs-vertical__buttons .tabs-vertical-button-2-6 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-2-6:checked ~ .tabs-vertical__content .content-flex-images-2-6 {
+  display: grid; }
+
+#tab-vertical-2-7:checked ~ .tabs-vertical__buttons .tabs-vertical-button-2-7 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-2-7:checked ~ .tabs-vertical__content .content-flex-images-2-7 {
+  display: grid; }
+
+#tab-vertical-3-1:checked ~ .tabs-vertical__buttons .tabs-vertical-button-3-1 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-3-1:checked ~ .tabs-vertical__content .content-flex-images-3-1 {
+  display: grid; }
+
+#tab-vertical-3-2:checked ~ .tabs-vertical__buttons .tabs-vertical-button-3-2 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-3-2:checked ~ .tabs-vertical__content .content-flex-images-3-2 {
+  display: grid; }
+
+#tab-vertical-3-3:checked ~ .tabs-vertical__buttons .tabs-vertical-button-3-3 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-3-3:checked ~ .tabs-vertical__content .content-flex-images-3-3 {
+  display: grid; }
+
+#tab-vertical-3-4:checked ~ .tabs-vertical__buttons .tabs-vertical-button-3-4 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-3-4:checked ~ .tabs-vertical__content .content-flex-images-3-4 {
+  display: grid; }
+
+#tab-vertical-3-5:checked ~ .tabs-vertical__buttons .tabs-vertical-button-3-5 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-3-5:checked ~ .tabs-vertical__content .content-flex-images-3-5 {
+  display: grid; }
+
+#tab-vertical-3-6:checked ~ .tabs-vertical__buttons .tabs-vertical-button-3-6 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-3-6:checked ~ .tabs-vertical__content .content-flex-images-3-6 {
+  display: grid; }
+
+#tab-vertical-3-7:checked ~ .tabs-vertical__buttons .tabs-vertical-button-3-7 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-3-7:checked ~ .tabs-vertical__content .content-flex-images-3-7 {
+  display: grid; }
+
+#tab-vertical-4-1:checked ~ .tabs-vertical__buttons .tabs-vertical-button-4-1 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-4-1:checked ~ .tabs-vertical__content .content-flex-images-4-1 {
+  display: grid; }
+
+#tab-vertical-4-2:checked ~ .tabs-vertical__buttons .tabs-vertical-button-4-2 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-4-2:checked ~ .tabs-vertical__content .content-flex-images-4-2 {
+  display: grid; }
+
+#tab-vertical-4-3:checked ~ .tabs-vertical__buttons .tabs-vertical-button-4-3 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-4-3:checked ~ .tabs-vertical__content .content-flex-images-4-3 {
+  display: grid; }
+
+#tab-vertical-4-4:checked ~ .tabs-vertical__buttons .tabs-vertical-button-4-4 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-4-4:checked ~ .tabs-vertical__content .content-flex-images-4-4 {
+  display: grid; }
+
+#tab-vertical-4-5:checked ~ .tabs-vertical__buttons .tabs-vertical-button-4-5 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-4-5:checked ~ .tabs-vertical__content .content-flex-images-4-5 {
+  display: grid; }
+
+#tab-vertical-4-6:checked ~ .tabs-vertical__buttons .tabs-vertical-button-4-6 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-4-6:checked ~ .tabs-vertical__content .content-flex-images-4-6 {
+  display: grid; }
+
+#tab-vertical-4-7:checked ~ .tabs-vertical__buttons .tabs-vertical-button-4-7 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-4-7:checked ~ .tabs-vertical__content .content-flex-images-4-7 {
+  display: grid; }
+
+#tab-vertical-5-1:checked ~ .tabs-vertical__buttons .tabs-vertical-button-5-1 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-5-1:checked ~ .tabs-vertical__content .content-flex-images-5-1 {
+  display: grid; }
+
+#tab-vertical-5-2:checked ~ .tabs-vertical__buttons .tabs-vertical-button-5-2 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-5-2:checked ~ .tabs-vertical__content .content-flex-images-5-2 {
+  display: grid; }
+
+#tab-vertical-5-3:checked ~ .tabs-vertical__buttons .tabs-vertical-button-5-3 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-5-3:checked ~ .tabs-vertical__content .content-flex-images-5-3 {
+  display: grid; }
+
+#tab-vertical-5-4:checked ~ .tabs-vertical__buttons .tabs-vertical-button-5-4 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-5-4:checked ~ .tabs-vertical__content .content-flex-images-5-4 {
+  display: grid; }
+
+#tab-vertical-5-5:checked ~ .tabs-vertical__buttons .tabs-vertical-button-5-5 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-5-5:checked ~ .tabs-vertical__content .content-flex-images-5-5 {
+  display: grid; }
+
+#tab-vertical-5-6:checked ~ .tabs-vertical__buttons .tabs-vertical-button-5-6 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-5-6:checked ~ .tabs-vertical__content .content-flex-images-5-6 {
+  display: grid; }
+
+#tab-vertical-5-7:checked ~ .tabs-vertical__buttons .tabs-vertical-button-5-7 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-5-7:checked ~ .tabs-vertical__content .content-flex-images-5-7 {
+  display: grid; }
+
+#tab-vertical-6-1:checked ~ .tabs-vertical__buttons .tabs-vertical-button-6-1 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-6-1:checked ~ .tabs-vertical__content .content-flex-images-6-1 {
+  display: grid; }
+
+#tab-vertical-6-2:checked ~ .tabs-vertical__buttons .tabs-vertical-button-6-2 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-6-2:checked ~ .tabs-vertical__content .content-flex-images-6-2 {
+  display: grid; }
+
+#tab-vertical-6-3:checked ~ .tabs-vertical__buttons .tabs-vertical-button-6-3 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-6-3:checked ~ .tabs-vertical__content .content-flex-images-6-3 {
+  display: grid; }
+
+#tab-vertical-6-4:checked ~ .tabs-vertical__buttons .tabs-vertical-button-6-4 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-6-4:checked ~ .tabs-vertical__content .content-flex-images-6-4 {
+  display: grid; }
+
+#tab-vertical-6-5:checked ~ .tabs-vertical__buttons .tabs-vertical-button-6-5 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-6-5:checked ~ .tabs-vertical__content .content-flex-images-6-5 {
+  display: grid; }
+
+#tab-vertical-6-6:checked ~ .tabs-vertical__buttons .tabs-vertical-button-6-6 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-6-6:checked ~ .tabs-vertical__content .content-flex-images-6-6 {
+  display: grid; }
+
+#tab-vertical-6-7:checked ~ .tabs-vertical__buttons .tabs-vertical-button-6-7 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-6-7:checked ~ .tabs-vertical__content .content-flex-images-6-7 {
+  display: grid; }
+
+#tab-vertical-7-1:checked ~ .tabs-vertical__buttons .tabs-vertical-button-7-1 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-7-1:checked ~ .tabs-vertical__content .content-flex-images-7-1 {
+  display: grid; }
+
+#tab-vertical-7-2:checked ~ .tabs-vertical__buttons .tabs-vertical-button-7-2 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-7-2:checked ~ .tabs-vertical__content .content-flex-images-7-2 {
+  display: grid; }
+
+#tab-vertical-7-3:checked ~ .tabs-vertical__buttons .tabs-vertical-button-7-3 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-7-3:checked ~ .tabs-vertical__content .content-flex-images-7-3 {
+  display: grid; }
+
+#tab-vertical-7-4:checked ~ .tabs-vertical__buttons .tabs-vertical-button-7-4 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-7-4:checked ~ .tabs-vertical__content .content-flex-images-7-4 {
+  display: grid; }
+
+#tab-vertical-7-5:checked ~ .tabs-vertical__buttons .tabs-vertical-button-7-5 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-7-5:checked ~ .tabs-vertical__content .content-flex-images-7-5 {
+  display: grid; }
+
+#tab-vertical-7-6:checked ~ .tabs-vertical__buttons .tabs-vertical-button-7-6 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-7-6:checked ~ .tabs-vertical__content .content-flex-images-7-6 {
+  display: grid; }
+
+#tab-vertical-7-7:checked ~ .tabs-vertical__buttons .tabs-vertical-button-7-7 {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  color: white; }
+
+#tab-vertical-7-7:checked ~ .tabs-vertical__content .content-flex-images-7-7 {
   display: grid; }
 
 ul {
@@ -634,14 +934,16 @@ ul {
   list-style-type: none; }
 
 .select {
-  width: 246px; }
+  width: 246px;
+  position: relative; }
 
 .select__gap {
   border-radius: 20px;
   border: 1px solid #A2C600;
   color: #a2c600;
   padding: 10px 47px 10px 15px;
-  position: relative; }
+  position: relative;
+  cursor: pointer; }
   .select__gap:after {
     content: "";
     display: block;
@@ -672,10 +974,24 @@ ul {
 .select__list {
   background: #FFFFFF;
   border-radius: 15px;
-  padding: 22px 15px 10px 15px; }
+  padding: 22px 15px 10px 18px;
+  width: 246px;
+  margin: 0 auto;
+  position: absolute;
+  top: 50px; }
 
-.select__item.active {
-  background: url("../assets/img/various/needle.svg") no-repeat; }
+.select__item {
+  cursor: pointer;
+  font-size: 1em;
+  line-height: 24px; }
+  .select__item.active {
+    background: url("../assets/img/various/needle.svg") no-repeat; }
+
+.gradientButtonGreen {
+  background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
+  width: 136px;
+  height: 42px;
+  color: white; }
 
 .header {
   background-color: #a2c600; }
@@ -782,5 +1098,15 @@ img[src="assets/img/nutrition-program/item-2.png"] {
     text-align: center; }
     .nutrition-program__content_description {
       line-height: 20px; }
+    .nutrition-program__content_bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      .nutrition-program__content_bottom_current-price {
+        font-size: calc(2em - 8px);
+        font-weight: bold; }
+      .nutrition-program__content_bottom_old-price {
+        text-decoration-line: line-through;
+        font-size: calc(1em + 2px); }
 
 /*# sourceMappingURL=style.css.map */
