Закончил основную верстку

--- a/scss/blocks/nutrition-program.scss
+++ b/scss/blocks/nutrition-program.scss
@@ -5,6 +5,7 @@ img[src="assets/img/nutrition-program/item-2.png"]{
 
 .nutrition-program{
   color: $linkPageColor;
+  padding-bottom: 97px;
   &__title{
     text-align: center;
   }
