--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,10 @@
 @import "blocks/main";
 @import "blocks/who-this-working";
 @import "blocks/nutrition-program";
+@import "blocks/form";
+@import "blocks/feedback.scss";
+@import "blocks/reviews.scss";
+@import "blocks/accordion";
+@import "blocks/we-instagram";
+@import "blocks/we-blog";
+@import "blocks/contacts.scss";
