--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -1,50 +1,64 @@
-.header{
+.header {
   background-color: $bgColorBlock;
-  &-min{
+
+  &-min {
     display: grid;
     grid-template-columns: minmax(0, 740px)  minmax(0, 154px) minmax(0, 189px) minmax(0, 207px);
     grid-template-rows: 34px;
     align-items: center;
-    &__icon{
+
+    &__icon {
       width: 24px;
       height: 24px;
       display: flex;
       align-items: center;
       justify-content: center;
-      &s{
+
+      &s {
         display: flex;
         justify-content: space-between;
         min-width: 55px;
         justify-self: end;
       }
-      img{
+
+      img {
         max-width: 100%;
       }
     }
-    &__link{
+
+    &__link {
       color: white;
     }
   }
-  &-max{
+
+  &-max {
     color: $linkPageColor;
     display: grid;
     grid-template-columns: minmax(0, 268px) 1fr;
-    &__logo{
+
+    &__logo {
       display: inline-block;
     }
-    &__nav{
+
+    &__nav {
       display: inherit;
       grid-template-columns: minmax(0, 268px) minmax(0, 243px) minmax(0, 136px) minmax(0, 158px) minmax(0, 71px);
       padding-left: 0;
-      &_link{
+
+      &_link {
         justify-self: start;
         align-self: center;
         color: $linkPageColor;
 
       }
     }
-    &__wrapper{
+
+    &__wrapper {
       background-color: white;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      right: 0;
     }
   }
 }
