--- a/scss/interface.scss
+++ b/scss/interface.scss
@@ -392,6 +392,10 @@ a {
     justify-content: center;
     padding-top: 7px;
   }
+  &__button{
+    width: 136px;
+    height: 42px;
+  }
 }
 
 .upHoverBlock {
@@ -638,4 +642,62 @@ input.input-form{
 
 .href{
   color: $colorYellow;
+}
+
+.scroll{
+  top: 0;
+  box-shadow: 0px 3px 6px -4px rgba(34, 60, 80, 0.33);
+}
+
+@keyframes animateOpenModal {
+  0%{
+    opacity: 0;
+    display: none;
+    top: -500px;
+  }
+  100%{
+    opacity: 1;
+    display: block;
+    top: 200px;
+  }
+}
+
+.form{
+  &-wrapper{
+    &-all{
+      display: none;
+      opacity: 0;
+      height: 100vh;
+      width: 100vw;
+      position: fixed;
+      left: 0;
+      right: 0;
+      top: 0  ;
+      background-color: rgba(0, 0, 0, 0.7);
+      z-index: 2;
+    }
+  }
+  div &-modal{
+    grid-template-rows: 70px repeat(3, 43px) 26px;
+    animation: animateOpenModal .3s ease;
+    max-width: 426px;
+    margin: auto;
+    position: fixed;
+    left: 0;
+    top: 200px;
+    right: 0;
+    background: white;
+    .form-modal__subtext{
+      width: auto;
+    }
+  }
+}
+
+.close-button{
+  position: absolute;
+  right: 42px;
+  top: 25px;
+  font-size: 31px;
+  color: white;
+  cursor: pointer;
 }
