--- a/scss/style.css
+++ b/scss/style.css
@@ -578,6 +578,9 @@ a {
   display: flex;
   justify-content: center;
   padding-top: 7px; }
+.tabs-vertical__button {
+  width: 136px;
+  height: 42px; }
 
 .upHoverBlock {
   position: relative; }
@@ -1059,6 +1062,51 @@ input.input-form {
 .href {
   color: #CFCF29; }
 
+.scroll {
+  top: 0;
+  box-shadow: 0px 3px 6px -4px rgba(34, 60, 80, 0.33); }
+
+@keyframes animateOpenModal {
+  0% {
+    opacity: 0;
+    display: none;
+    top: -500px; }
+  100% {
+    opacity: 1;
+    display: block;
+    top: 200px; } }
+.form-wrapper-all {
+  display: none;
+  opacity: 0;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2; }
+div .form-modal {
+  grid-template-rows: 70px repeat(3, 43px) 26px;
+  animation: animateOpenModal .3s ease;
+  max-width: 426px;
+  margin: auto;
+  position: fixed;
+  left: 0;
+  top: 200px;
+  right: 0;
+  background: white; }
+  div .form-modal .form-modal__subtext {
+    width: auto; }
+
+.close-button {
+  position: absolute;
+  right: 42px;
+  top: 25px;
+  font-size: 31px;
+  color: white;
+  cursor: pointer; }
+
 .header {
   background-color: #a2c600; }
   .header-min {
@@ -1096,7 +1144,11 @@ input.input-form {
         align-self: center;
         color: #333333; }
     .header-max__wrapper {
-      background-color: white; }
+      background-color: white;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      right: 0; }
 
 .main {
   padding: 80px 0 85px 0;
@@ -1106,6 +1158,8 @@ input.input-form {
   background-repeat: no-repeat;
   z-index: 0;
   position: relative; }
+  .main-wrapper {
+    padding-top: 81px; }
   .main:after {
     content: url("../assets/img/main/image-food.png");
     position: absolute;
@@ -1305,10 +1359,10 @@ img[src="assets/img/nutrition-program/item-2.png"] {
   .accordion-item {
     margin-bottom: 20px; }
     .accordion-item__input {
-      position: absolute;
+      position: relative;
       top: 0;
       left: 0;
-      opacity: 0; }
+      display: none; }
       .accordion-item__input:checked ~ .accordion-item__trigger .accordion-item__content {
         display: block; }
     .accordion-item__trigger {
@@ -1361,13 +1415,15 @@ img[src="assets/img/nutrition-program/item-2.png"] {
     .we-instagram__item:hover .textHover {
       opacity: 1; }
 
-.our-blog__content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  padding-top: 75px; }
-.our-blog__title {
-  text-align: center; }
+.our-blog {
+  padding-bottom: 80px; }
+  .our-blog__content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    padding-top: 75px; }
+  .our-blog__title {
+    text-align: center; }
 
 .contacts {
   background: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%); }
@@ -1398,5 +1454,20 @@ img[src="assets/img/nutrition-program/item-2.png"] {
   .contacts iframe {
     position: absolute;
     right: 0; }
+
+.footer__content {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50px;
+  color: #a2c600;
+  align-items: center; }
+.footer__link:first-child {
+  display: grid;
+  justify-items: flex-start; }
+.footer__link:last-child {
+  display: flex;
+  justify-content: flex-end; }
+  .footer__link:last-child a {
+    color: #a2c600; }
 
 /*# sourceMappingURL=style.css.map */
